--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ docutils==0.17.1
 flake8==4.0.1
 flake8-docstrings==1.6.0
 flake8-quotes==3.3.1
+gitchangelog==3.0.4
 glob2==0.7
 idna==3.3
 imagesize==1.3.0
@@ -17,6 +18,7 @@ Jinja2==3.0.3
 Mako==1.1.6
 MarkupSafe==2.0.1
 mccabe==0.6.1
+numpydoc==1.1.0
 packaging==21.3
 parse==1.19.0
 parse-type==0.5.2
@@ -28,6 +30,7 @@ pydocstyle==6.1.1
 pyflakes==2.4.0
 Pygments==2.10.0
 pyparsing==3.0.6
+pystache==0.5.4
 pytest==6.2.5
 pytest-bdd==5.0.0
 pytest-cov==3.0.0
