--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Build
-        run: make build
+        run: echo $GITHUB_EVENT_NAME && make build
 
       - name: Test
         run: make test
