--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -178,6 +178,7 @@ else:
     github_event_name = None
 
 if github_event_name == 'pull_request':
+    print(f'Checking if {version} is in {repo_tags}.', file=sys.stderr)
     if version in repo_tags:
         logger.error(f'The tag {version} already exists.')
         sys.exit(1)
