fix: dev: Debug Github Workflow III.

--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -170,7 +170,10 @@ with open(os.path.join('redmx', 'VERSION')) as version_file:
 
 unreleased_version_label = version
 repo = Repo('.')
-repo_tags = repo.tags
+repo_tags = []
+
+for tag in repo.tags:
+    repo_tags.append(tag.name)
 
 if 'GITHUB_EVENT_NAME' in os.environ:
     github_event_name = os.environ['GITHUB_EVENT_NAME']
