--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -157,9 +157,11 @@ tag_filter_regexp = r'^[0-9]+\.[0-9]+(\.[0-9]+)?$'
 ##
 ## This label will be used as the changelog Title of the last set of changes
 ## between last valid tag and HEAD if any.
+import json
 import logging
 import os
 import sys
+import urllib3
 
 from git import Repo
 
@@ -171,9 +173,12 @@ with open(os.path.join('redmx', 'VERSION')) as version_file:
 unreleased_version_label = version
 repo = Repo('.')
 repo_tags = []
+http = urllib3.PoolManager()
+r = http.request('GET', 'https://api.github.com/repos/locp/redmx/tags')
+data = json.loads(r.data)
 
-for tag in repo.tags:
-    repo_tags.append(tag.name)
+for tag in data:
+    repo_tags.append(tag['name'])
 
 if 'GITHUB_EVENT_NAME' in os.environ:
     github_event_name = os.environ['GITHUB_EVENT_NAME']
