new: Add GitHub workflow automations.

--- a/.gitchangelog.rc
+++ b/.gitchangelog.rc
@@ -157,12 +157,35 @@ tag_filter_regexp = r'^[0-9]+\.[0-9]+(\.[0-9]+)?$'
 ##
 ## This label will be used as the changelog Title of the last set of changes
 ## between last valid tag and HEAD if any.
+import json
+import logging
 import os
+import sys
+import urllib3
 
+logger = logging.getLogger('gitchangelog')
 with open(os.path.join('redmx', 'VERSION')) as version_file:
     version = version_file.read().strip()
 
 unreleased_version_label = version
+repo_tags = []
+http = urllib3.PoolManager()
+r = http.request('GET', 'https://api.github.com/repos/locp/redmx/tags')
+data = json.loads(r.data)
+
+for tag in data:
+    repo_tags.append(tag['name'])
+
+if 'GITHUB_EVENT_NAME' in os.environ:
+    github_event_name = os.environ['GITHUB_EVENT_NAME']
+else:
+    github_event_name = None
+
+if github_event_name == 'pull_request':
+    print(f'Checking if {version} is in {repo_tags}.', file=sys.stderr)
+    if version in repo_tags:
+        logger.error(f'The tag {version} already exists.')
+        sys.exit(1)
 
 ## ``output_engine`` is a callable
 ##
@@ -249,8 +272,7 @@ include_merge = False
 #     r'/(?P<rev>[0-9]+\.[0-9]+(\.[0-9]+)?)\s+\([0-9]+-[0-9]{2}-[0-9]{2}\)\n--+\n/',
 #     idx=lambda m: m.start(1)
 # )
-#publish = stdout
-
+publish = stdout
 
 ## ``revs`` is a list of callable or a list of string
 ##
