--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 alabaster==0.7.12
 attrs==21.2.0
 Babel==2.9.1
+bleach==4.1.0
 build==0.7.0
 certifi==2021.10.8
 charset-normalizer==2.0.7
+colorama==0.4.4
 coverage==6.1.2
 docutils==0.17.1
 flake8==4.0.1
@@ -13,8 +15,10 @@ gitchangelog==3.0.4
 glob2==0.7
 idna==3.3
 imagesize==1.3.0
+importlib-metadata==4.8.2
 iniconfig==1.1.1
 Jinja2==3.0.3
+keyring==23.2.1
 Mako==1.1.6
 MarkupSafe==2.0.1
 mccabe==0.6.1
@@ -23,6 +27,7 @@ packaging==21.3
 parse==1.19.0
 parse-type==0.5.2
 pep517==0.12.0
+pkginfo==1.8.1
 pluggy==1.0.0
 py==1.11.0
 pycodestyle==2.8.0
@@ -36,7 +41,10 @@ pytest-bdd==5.0.0
 pytest-cov==3.0.0
 pytest-flake8==1.0.7
 pytz==2021.3
+readme-renderer==30.0
 requests==2.26.0
+requests-toolbelt==0.9.1
+rfc3986==1.5.0
 six==1.16.0
 snowballstemmer==2.2.0
 Sphinx==4.3.0
@@ -48,4 +56,8 @@ sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 toml==0.10.2
 tomli==1.2.2
+tqdm==4.62.3
+twine==3.6.0
 urllib3==1.26.7
+webencodings==0.5.1
+zipp==3.6.0
