--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,66 @@
 alabaster==0.7.12
-attrs==21.2.0
-Babel==2.9.1
-bleach==4.1.0
-build==0.7.0
-certifi==2021.10.8
-charset-normalizer==2.0.7
-colorama==0.4.4
-coverage==6.1.2
-docutils==0.17.1
-flake8==4.0.1
+attrs==22.1.0
+Babel==2.10.3
+bleach==5.0.1
+build==0.8.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+colorama==0.4.5
+commonmark==0.9.1
+coverage==6.5.0
+cryptography==38.0.1
+docutils==0.19
+flake8==5.0.4
 flake8-docstrings==1.6.0
 flake8-quotes==3.3.1
+future==0.18.2
 gitchangelog==3.0.4
 glob2==0.7
-idna==3.3
-imagesize==1.3.0
-importlib-metadata==4.8.2
+idna==3.4
+imagesize==1.4.1
+importlib-metadata==5.0.0
 iniconfig==1.1.1
-Jinja2==3.0.3
-keyring==23.2.1
-Mako==1.1.6
-MarkupSafe==2.0.1
-mccabe==0.6.1
-numpydoc==1.1.0
+jaraco.classes==3.2.3
+jeepney==0.8.0
+Jinja2==3.1.2
+keyring==23.9.3
+Mako==1.2.3
+mando==0.6.4
+MarkupSafe==2.1.1
+mccabe==0.7.0
+more-itertools==8.14.0
+numpydoc==1.4.0
 packaging==21.3
 parse==1.19.0
-parse-type==0.5.2
-pep517==0.12.0
-pkginfo==1.8.1
+parse-type==0.6.0
+pathspec==0.10.1
+pep517==0.13.0
+pkginfo==1.8.3
 pluggy==1.0.0
 py==1.11.0
-pycodestyle==2.8.0
+pycodestyle==2.9.1
+pycparser==2.21
 pydocstyle==6.1.1
-pyflakes==2.4.0
-Pygments==2.10.0
-pyparsing==3.0.6
-pystache==0.5.4
-pytest==6.2.5
-pytest-bdd==5.0.0
-pytest-cov==3.0.0
-pytest-flake8==1.0.7
-pytz==2021.3
-readme-renderer==30.0
-requests==2.26.0
+pyflakes==2.5.0
+Pygments==2.13.0
+pyparsing==3.0.9
+pystache==0.6.0
+pytest==7.1.3
+pytest-bdd==6.0.1
+pytest-cov==4.0.0
+pytz==2022.4
+PyYAML==6.0
+radon==5.1.0
+readme-renderer==37.2
+requests==2.28.1
 requests-toolbelt==0.9.1
-rfc3986==1.5.0
+rfc3986==2.0.0
+rich==12.5.1
+SecretStorage==3.3.3
 six==1.16.0
 snowballstemmer==2.2.0
-Sphinx==4.3.0
+Sphinx==5.2.3
 sphinxcontrib-applehelp==1.0.2
 sphinxcontrib-devhelp==1.0.2
 sphinxcontrib-htmlhelp==2.0.0
@@ -55,9 +68,10 @@ sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.3
 sphinxcontrib-serializinghtml==1.1.5
 toml==0.10.2
-tomli==1.2.2
-tqdm==4.62.3
-twine==3.6.0
-urllib3==1.26.7
+tomli==2.0.1
+tqdm==4.64.1
+twine==4.0.1
+urllib3==1.26.12
 webencodings==0.5.1
-zipp==3.6.0
+yamllint==1.28.0
+zipp==3.8.1
