--- a/setup.cfg
+++ b/setup.cfg
@@ -11,9 +11,10 @@ docstring-convention: numpy
 max-line-length = 120
 per-file-ignores =
     tests/*:D104,D401,D403
+radon-max-cc: 5
 
 [tool:pytest]
-addopts = --cov --flake8 --verbose
+addopts = --cov --verbose
 markers =
     system_tests: Marks tests as system tests.
     unit_tests: Marks tests as unit tests.
