fix: dev: Correct lint step in CI workflow.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Lint
-        run: make
+        run: make lint
 
       - name: Build
         run: make build
